# FinTrackBot

./: .env.example  .gitignore  Dockerfile  Dockerfile.api  Dockerfile.worker  Makefile  README.md  aiogram_run.py  alembic.ini  create_bot.py  docker-compose.yml  pyproject.toml  render-entrypoint.sh  render.yaml  requirements.txt
alembic/: env.py
alembic/versions/: 20240101_000001_initial.py
app/: config.py  db.py  main.py  models.py  schemas.py
app/api/: main.py  routes_public.py  webhook.py
app/bot/: instance.py  loader.py  webhook.py
app/bot/handlers/: __init__.py  add_expense.py  budget.py  goal.py  income.py  report.py  settings.py  start.py  today.py
app/bot/keyboards/: __init__.py  common.py
app/bot/middlewares/: __init__.py  dedup.py
app/repositories/: __init__.py  budgets.py  goals.py  transactions.py  users.py
app/scheduler/: jobs.py
app/services/: __init__.py  categorizer.py  goals.py  limits.py  parsing.py  periods.py  reports.py
app/templates/: report.html
db_handler/: db_creation.py  db_func.py
docker/: nginx.conf
handlers/: admin.py  start.py  utils_handler.py
keyboards/: admin_kb.py  firststart_kb.py  operations_kb.py  user_kb.py
tests/: test_goal_rollover.py  test_limits.py  test_parsing.py  test_periods.py
texts/: text.py
utils/: first_setup.py  limit.py  my_utils.py
